Fix problemas with spring security